// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldWithLabel component should render properly when lable is not present 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 17px;
}

.c4 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  grid-template-columns: minmax(max-content, 25%) minmax(auto, 80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c0 .c1 {
  display: inline-flex;
  align-items: center;
  flex-direction: row;
}

<div>
  <div
    class="c0"
    labelposition="left"
  >
    <div
      class="c1 c2"
    >
      Dummy Field
    </div>
    <span
      class="c3 c4"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Description
    </span>
  </div>
</div>
`;

exports[`FieldWithLabel component should render properly with props labelPosition: bottom, fullWidth: false, fieldWithMaxContent: false 1`] = `
.c1 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c4 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c6 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  min-width: 300px;
  grid-template-areas: 'field' 'description' 'label';
}

.c0 .c3 {
  display: inline-flex;
  align-items: flex-start;
  flex-direction: column-reverse;
}

<div>
  <div
    class="c0"
    labelposition="bottom"
    minwidth="300"
  >
    <label
      class="c1 c2"
      labelposition="left"
    >
      Dummy Label
    </label>
    <div
      class="c3 c4"
    >
      Dummy Field
    </div>
    <span
      class="c5 c6"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Description
    </span>
  </div>
</div>
`;

exports[`FieldWithLabel component should render properly with props labelPosition: left, fullWidth: true, fieldWithMaxContent: true 1`] = `
.c1 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c4 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c6 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c0 {
  margin: 0.8rem 0;
  display: grid;
  align-items: center;
  min-width: 300px;
  grid-template-columns: minmax(max-content, 25%) max-content;
  grid-template-areas: 'label field' 'random description';
}

.c0 .c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

<div>
  <div
    class="c0"
    labelposition="left"
    minwidth="300"
  >
    <label
      class="c1 c2"
      labelposition="left"
    >
      Dummy Label
    </label>
    <div
      class="c3 c4"
    >
      Dummy Field
    </div>
    <span
      class="c5 c6"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Description
    </span>
  </div>
</div>
`;

exports[`FieldWithLabel component should render properly with props labelPosition: right, fullWidth: true, fieldWithMaxContent: false 1`] = `
.c1 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c4 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c6 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c0 {
  margin: 0.8rem 0;
  display: grid;
  align-items: center;
  min-width: 300px;
  grid-template-columns: minmax(max-content, 80%) minmax(max-content, 25%);
  grid-template-areas: 'field label' 'description random';
}

.c0 .c3 {
  display: flex;
  align-items: center;
  flex-direction: row-reverse;
}

<div>
  <div
    class="c0"
    labelposition="right"
    minwidth="300"
  >
    <label
      class="c1 c2"
      labelposition="left"
    >
      Dummy Label
    </label>
    <div
      class="c3 c4"
    >
      Dummy Field
    </div>
    <span
      class="c5 c6"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Description
    </span>
  </div>
</div>
`;

exports[`FieldWithLabel component should render properly with props labelPosition: top, fullWidth: false, fieldWithMaxContent: true 1`] = `
.c1 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c4 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c6 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  min-width: 300px;
  grid-template-areas: 'label' 'field' 'description';
}

.c0 .c3 {
  display: inline-flex;
  align-items: flex-start;
  flex-direction: column;
}

<div>
  <div
    class="c0"
    labelposition="top"
    minwidth="300"
  >
    <label
      class="c1 c2"
      labelposition="left"
    >
      Dummy Label
    </label>
    <div
      class="c3 c4"
    >
      Dummy Field
    </div>
    <span
      class="c5 c6"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Description
    </span>
  </div>
</div>
`;
